fixing controlnet refactor pipeline wrapper agian
